@@ -621,6 +621,8 @@ Release 0.22.0 - Unreleased
     HDFS-259. Remove intentionally corrupt 0.13 directory layout creation.
     (Todd Lipcon via eli).
 
+    HDFS-1481. NameNode should validate fsimage before rolling. (hairong)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
